<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/e"
    tools:context="com.example.mohit.nomorelies.ParentLogin">
    <EditText
        android:id="@+id/rollno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="71dp"
        android:ems="10"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="text"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/rollno"/>

    <EditText
        android:id="@+id/loginemailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:layout_below="@+id/rollno"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textEmailAddress"
        android:layout_centerHorizontal="true"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/loginpasswordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_below="@+id/loginemailField"
        android:hint="@string/password"
        />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/Green"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/login"
        android:layout_below="@+id/loginpasswordField"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/linkbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginBtn"
        android:textColor="@color/Red"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/newacc" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/Parents"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/loginemailField" />
</RelativeLayout>
