<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/e"
    tools:context="com.example.mohit.nomorelies.Addnewstudent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_height="wrap_content"
        android:text="@string/Details"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        />
    <EditText
        android:id="@+id/rollno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/rollno"
        android:textColor="@color/colorPrimary"
        android:layout_below="@id/textView3"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Stuname"
        android:layout_below="@id/rollno"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <Button
        android:id="@+id/add"
        android:layout_width="281dp"
        android:layout_height="wrap_content"
        android:textColor="@color/Green"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="31dp"
        android:layout_marginStart="55dp"
        android:text="@string/AddStudent" />

</RelativeLayout>
