<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/d"
    tools:context="com.example.mohit.nomorelies.Teachrec">

    <TextView
        android:id="@+id/Name"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textAlignment="center"
        />

    <Button
        android:id="@+id/Attendancebtn"
        android:layout_width="344dp"
        android:textColor="@color/Green"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="124dp"
        android:text="@string/attendance" />
    <Button
        android:id="@+id/NewStudentBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@+id/Attendancebtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/AddStudent" />
    <Button
        android:id="@+id/LogoutBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/Red"
        android:layout_below="@+id/NewStudentBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/logout" />
</RelativeLayout>
